# portal_telemedicina

./: README.md
BD/esquema/: insert_tbl_usuarios.sql  tbl_paso_profesionales.sql  tbl_subtablas.sql  tbl_tablas.sql  tbl_usuarios.sql  tbl_zonas_acceso.sql
BD/modelo/: BD_TelemedicinaCS.pdm
doc/: CDC.md  ambiente_dev_local.md  mejoras_rust.md  mejoras_rust_extra.md  patron_repositorio.md  patron_repositorio2.md  plan_telemed1.md  request_DS_01.txt  request_DS_01_resp.md
telemed/backend-rust/: .env  Cargo.toml
telemed/backend-rust/src/: main.rs
telemed/backend-rust2/: .env  .gitignore  Cargo.toml
telemed/backend-rust2/src/: app_state.rs  config.rs  error.rs  main.rs  models.rs
telemed/backend-rust2/src/api/: mod.rs  usuarios.rs
telemed/backend-rust2/src/repositories/: mod.rs
telemed/backend-rust2/src/repositories/mysql/: mod.rs  usuario.rs
telemed/bff-fastapi/: README.md
telemed/frontend/: README.md
telemed/frontend/movil/: README.md
telemed/frontend/web/: README.md
tools/: lee_tabla_mysql.py  lee_tabla_mysql2.py
tools/gen_codigo/: check_templates.py  main.py
tools/gen_codigo/generators/: __init__.py  base.py  json_loader.py  mysql.py
tools/gen_codigo/templates/: README.md  create_dto.jinja2  delete.jinja2  entity.jinja2  get_all.jinja2  plantilla_cargo.jinja2  plantilla_handler.jinja2  post.jinja2  put.jinja2  update_dto.jinja2
