[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "24.0"
dotenv = "0.15"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
sha1 = "0.10"
futures = "0.3"
lazy_static = "1.4"